--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/ui": "^2.0",
         "predis/predis": "^1.1",
         "spatie/geocoder": "^3.10",
+        "spatie/laravel-permission": "^5.4",
         "torann/geoip": "^1.2",
         "twilio/sdk": "^6.21",
         "tymon/jwt-auth": "^1.0"
